--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:text="Continue"
-        android:background="@android:color/holo_blue_dark"
+        android:textAllCaps="false"
+        android:background="@drawable/button_style"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
