--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -6,34 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".view.NoteActivity">
 
-    <RelativeLayout
-        android:id="@+id/top_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <include
+        layout="@layout/top_header"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/app_icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            app:srcCompat="@drawable/icon"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentLeft="true"/>
-
-        <ImageView
-            android:id="@+id/language"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:visibility="visible"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/button_style"
-            android:layout_alignParentRight="true"
-            app:srcCompat="@drawable/language" />
-
-    </RelativeLayout>
+    </include>
 
     <EditText
         android:id="@+id/PersonName"
@@ -80,10 +59,10 @@
 
     <Button
         android:id="@+id/submit"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Submit"
-        android:background="@drawable/button_style"
+        style="@style/PresentiButton"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:layout_marginTop="20dp"
