--- a/app/src/main/res/layout/activity_scan_qractivity.xml
+++ b/app/src/main/res/layout/activity_scan_qractivity.xml
@@ -6,116 +6,85 @@
     android:layout_height="match_parent"
     tools:context=".view.ScanQRActivity">
 
-    <RelativeLayout
-        android:id="@+id/top_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <include
+        layout="@layout/top_header"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/app_icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            app:srcCompat="@drawable/icon"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentLeft="true"/>
-
-        <ImageView
-            android:id="@+id/language"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:visibility="visible"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="15dp"
-            android:layout_toLeftOf="@id/log_out"
-            app:srcCompat="@drawable/language" />
-
-        <ImageView
-            android:id="@+id/log_out"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:visibility="visible"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentRight="true"
-            app:srcCompat="@drawable/log_out" />
-
-    </RelativeLayout>
-
+    </include>
 
     <TextView
         android:id="@+id/company_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MY LOZO TECH PVT LTD"
-        android:visibility="visible"
-        android:textStyle="bold"
-        android:textSize="25sp"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/top_header"
+        android:textColor="@color/blue"
+        android:text="MY LOZO TECH PVT LTD"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_header" />
 
     <TextView
         android:id="@+id/log_attendance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log Attendance"
-        android:visibility="visible"
-        android:textSize="18sp"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/company_name"
+        android:text="Log Attendance"
+        android:textSize="18sp"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/company_name" />
 
     <TextView
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hi "
-        android:visibility="visible"
-        android:textSize="20sp"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/log_attendance"
+        android:text="Hi "
+        android:textSize="20sp"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_attendance" />
 
     <ImageView
         android:id="@+id/barcode"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:visibility="visible"
-        app:srcCompat="@drawable/qr"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/user_name"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_name"
+        app:srcCompat="@drawable/qr" />
 
     <TextView
         android:id="@+id/click_here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Click here to scan QR"
-        android:visibility="visible"
         android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/barcode"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/barcode" />
 
     <Button
         android:id="@+id/remote"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        style="@style/PresentiButton"
         android:text="Log Remotely"
-        android:visibility="visible"
-        android:background="@drawable/button_style"
-        android:layout_marginTop="35dp"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/click_here"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/click_here" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
