--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,4 +36,10 @@
 
     <style name="Theme.Presenti.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="PresentiButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">@drawable/button_style</item>
+    </style>
+
 </resources>
