#1 Icons set created #2 Network calls moved in separate class

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,13 +53,14 @@
         app:layout_constraintTop_toBottomOf="@+id/text_staff_login" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_continue"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:text="Continue"
         android:textAllCaps="false"
         style="@style/PresentiButton"
+        android:enabled="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
