#1 Updating note #2 Saving user data #3 validating log in log out

--- a/app/src/main/res/layout/activity_scan_qractivity.xml
+++ b/app/src/main/res/layout/activity_scan_qractivity.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="Log Attendance"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="Hi "
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -70,6 +72,7 @@
         android:layout_height="wrap_content"
         android:text="Click here to scan QR"
         android:textSize="15sp"
+        android:textColor="@color/black"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
