--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log Attendance"
+        android:textColor="@color/black"
         android:visibility="visible"
         android:textSize="18sp"
         android:layout_marginTop="35dp"
@@ -46,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hi "
+        android:textColor="@color/black"
         android:visibility="visible"
         android:textSize="20sp"
         android:layout_marginTop="35dp"
@@ -72,7 +74,8 @@
         android:layout_height="wrap_content"
         android:text="Last IN Time"
         android:visibility="visible"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/login"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -97,7 +100,8 @@
         android:layout_height="wrap_content"
         android:text="Last OUT Time"
         android:visibility="visible"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/logout"
         app:layout_constraintLeft_toLeftOf="parent"
