--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rootView"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.ScanQRActivity">
@@ -19,125 +19,139 @@
         android:id="@+id/company_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MY LOZO TECH PVT LTD"
-        android:visibility="visible"
-        android:textColor="@color/blue"
-        android:textStyle="bold"
-        android:textSize="25sp"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/top_header"
+        android:text="MY LOZO TECH PVT LTD"
+        android:textColor="@color/blue"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_header" />
 
     <TextView
         android:id="@+id/log_attendance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
         android:text="Log Attendance"
         android:textColor="@color/black"
-        android:visibility="visible"
         android:textSize="18sp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/company_name"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/company_name" />
 
     <TextView
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
         android:text="Hi "
         android:textColor="@color/black"
-        android:visibility="visible"
         android:textSize="20sp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/log_attendance"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_attendance" />
 
     <Button
         android:id="@+id/login"
+        style="@style/PresentiButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="LogIn"
-        style="@style/PresentiButton"
-        android:visibility="visible"
         android:layout_marginTop="35dp"
+        android:text="LogIn"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/user_name"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
     <TextView
         android:id="@+id/last_in_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Last IN Time"
-        android:visibility="visible"
-        android:textSize="18sp"
-        android:textColor="@color/black"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/login"
+        android:text="Last IN Time"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login" />
 
     <Button
         android:id="@+id/logout"
+        style="@style/PresentiButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="LogOut"
-        style="@style/PresentiButton"
-        android:visibility="visible"
         android:layout_marginTop="35dp"
+        android:text="LogOut"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/last_in_time"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/last_in_time" />
 
     <TextView
         android:id="@+id/last_out_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
         android:text="Last OUT Time"
-        android:visibility="visible"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/logout"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logout" />
 
     <LinearLayout
+        android:id="@+id/buttonContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/last_out_time"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/last_out_time">
 
         <Button
             android:id="@+id/note"
+            style="@style/PresentiButton"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Note"
-            style="@style/PresentiButton"
             android:layout_gravity="left"
             android:layout_marginRight="25dp"
-            android:textAllCaps="false"/>
+            android:text="Note"
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/photo"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
             android:layout_gravity="right"
-            android:enabled="false"
+            android:layout_marginLeft="25dp"
             android:background="@drawable/button_style"
+            android:enabled="false"
             android:text="Photo"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="#6db300"
+        android:layout_marginTop="25dp"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonContainer">
+
+    </ProgressBar>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
