--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -19,57 +19,72 @@
         android:id="@+id/PersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Customer Name"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/top_header"
+        android:layout_marginRight="15dp"
+        android:ems="10"
+        android:hint="Customer Name"
+        android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_header" />
 
     <EditText
         android:id="@+id/Phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="phone"
-        android:hint="Mobile Number"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/PersonName"
+        android:layout_marginRight="15dp"
+        android:ems="10"
+        android:hint="Mobile Number"
+        android:inputType="phone"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PersonName" />
 
     <EditText
         android:id="@+id/MultiLine"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="15dp"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         android:hint="Add Note"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/Phone"
+        android:inputType="textMultiLine"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Phone" />
 
-    <Button
-        android:id="@+id/submit"
-        android:layout_width="200dp"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        style="@style/PresentiButton"
+        android:layout_marginTop="20dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/MultiLine"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MultiLine">
 
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminateTint="#6db300"
+            android:visibility="gone">
+
+        </ProgressBar>
+
+        <Button
+            android:id="@+id/submit"
+            style="@style/PresentiButton"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Submit" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
