--- a/app/src/main/res/layout/activity_scan_qractivity.xml
+++ b/app/src/main/res/layout/activity_scan_qractivity.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:textColor="@color/blue"
-        android:text="MY LOZO TECH PVT LTD"
+        android:text="MYLOZO TECH PVT LTD"
         android:textSize="25sp"
         android:textStyle="bold"
         android:visibility="visible"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        android:text="Log Attendance"
+        android:text="@string/logAttendance"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:visibility="visible"
@@ -70,7 +70,7 @@
         android:id="@+id/click_here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click here to scan QR"
+        android:text="@string/clickHere"
         android:textSize="15sp"
         android:textColor="@color/black"
         android:visibility="visible"
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         style="@style/PresentiButton"
-        android:text="Log Remotely"
+        android:text="@string/remoteLogin"
         android:textAllCaps="false"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
