--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -23,21 +23,22 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="15dp"
         android:ems="10"
-        android:hint="Customer Name"
+        android:hint="@string/customerName"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_header" />
 
     <EditText
-        android:id="@+id/Phone"
+        android:id="@+id/phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="15dp"
         android:ems="10"
-        android:hint="Mobile Number"
+        android:maxLength="10"
+        android:hint="@string/mobileNumber"
         android:inputType="phone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -52,11 +53,11 @@
         android:layout_marginRight="15dp"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="Add Note"
+        android:hint="@string/addNote"
         android:inputType="textMultiLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Phone" />
+        app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -83,7 +84,7 @@
             style="@style/PresentiButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Submit" />
+            android:text="@string/submit" />
 
     </FrameLayout>
 
