--- a/app/src/main/res/layout/activity_language_selector.xml
+++ b/app/src/main/res/layout/activity_language_selector.xml
@@ -32,7 +32,7 @@
             android:textSize="18sp"
             android:paddingTop="5dp"
             android:layout_marginLeft="70dp"
-            android:text="Select Language"
+            android:text="@string/languageSelect"
             android:textColor="@color/black">
 
         </TextView>
@@ -62,7 +62,7 @@
             android:id="@+id/marathi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Marathi">
+            android:text="@string/languageMarathi">
 
         </RadioButton>
 
@@ -70,7 +70,7 @@
             android:id="@+id/hindi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hindi">
+            android:text="@string/languageHindi">
 
         </RadioButton>
 
