--- a/app/src/main/res/layout/top_header.xml
+++ b/app/src/main/res/layout/top_header.xml
@@ -21,6 +21,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
+        style="@style/Theme.graphic"
         android:layout_toLeftOf="@id/log_out"
         android:visibility="visible" />
 
