--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,4 +42,8 @@
         <item name="android:background">@drawable/button_style</item>
     </style>
 
+    <style name="Theme.graphic" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="tint"> @color/black</item>
+    </style>
+
 </resources>
