--- a/app/src/main/res/layout/activity_mark_attendance.xml
+++ b/app/src/main/res/layout/activity_mark_attendance.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/logAttendance"
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Hi "
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/lastInTime"
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/lastOutTime"
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
