--- a/app/src/main/res/layout/activity_scan_qractivity.xml
+++ b/app/src/main/res/layout/activity_scan_qractivity.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="@string/logAttendance"
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="18sp"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:text="Hi "
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/clickHere"
-        android:textColor="@color/black"
+        style="@style/Theme.textColor"
         android:textSize="15sp"
         android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
