--- a/app/src/main/res/layout/activity_language_selector.xml
+++ b/app/src/main/res/layout/activity_language_selector.xml
@@ -21,8 +21,8 @@
             android:id="@+id/backButton"
             android:layout_width="40dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            app:tint="@color/black">
+            style="@style/Theme.graphic"
+            android:src="@drawable/ic_baseline_arrow_back_24">
 
         </ImageView>
 
@@ -33,7 +33,7 @@
             android:paddingTop="5dp"
             android:layout_marginLeft="70dp"
             android:text="@string/languageSelect"
-            android:textColor="@color/black">
+            style="@style/Theme.textColor">
 
         </TextView>
 
