--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,4 +17,21 @@
     <style name="Theme.graphic" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="tint"> @color/white</item>
     </style>
+
+    <style name="Theme.textColor" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:textColor"> @color/white</item>
+    </style>
+
+    <style name="Theme.textMarkPresence" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:textColor">#28fc03</item>
+    </style>
+
+    <style name="Theme.topGreenImage" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:src">@drawable/top_green_for_dark_theme</item>
+    </style>
+
+    <style name="Theme.splashBelowTopGreen" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:src">@drawable/splash_image_for_dark_theme</item>
+    </style>
+
 </resources>
