--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:id="@+id/image_logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="-20dp"
+        android:layout_marginTop="-50dp"
         app:layout_constraintEnd_toEndOf="@id/image_bg"
         app:layout_constraintStart_toStartOf="@id/image_bg"
         app:layout_constraintBottom_toBottomOf="@id/image_bg"
@@ -33,7 +33,7 @@
         android:id="@+id/text_staff_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:clickable="false"
         android:cursorVisible="false"
         android:focusable="false"
@@ -48,8 +48,8 @@
     <EditText
         android:id="@+id/editTextPhone"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="38dp"
         android:ems="10"
         android:hint="@string/staffPhoneNumber"
         android:inputType="phone"
@@ -60,7 +60,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone">
@@ -69,7 +69,7 @@
             android:id="@+id/button_continue"
             style="@style/PresentiButton"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:enabled="false"
             android:text="@string/continueBtn"
             android:textAllCaps="false"
