--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,10 +33,10 @@
         android:id="@+id/text_staff_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:clickable="false"
         android:cursorVisible="false"
         android:focusable="false"
+        android:layout_marginTop="3dp"
         android:text="@string/staffLogintText"
         style="@style/Theme.textMarkPresence"
         android:textSize="22sp"
@@ -49,7 +49,7 @@
         android:id="@+id/editTextPhone"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="18dp"
         android:ems="10"
         android:hint="@string/staffPhoneNumber"
         android:inputType="phone"
@@ -61,7 +61,7 @@
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone">
@@ -97,10 +97,11 @@
         android:layout_height="wrap_content"
         style="@style/Theme.textColor"
         android:textSize="18sp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:layout_marginRight="15dp"
         android:text="@string/hyperlink"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button">
 
     </TextView>
